# features-analyzer

./: .gitignore  README.md  main.py  model.py  network.py  parser.py  pyproject.toml  requirements.txt
analyzer/: __init__.py  csv_writer.py  features_v2.py  model.py
network/: .env  __init__.py  base.py  constant.py  gitlab.py  keadmin.py  model.py  secret.py  youtrack.py
parser/: __init__.py  config.py  features_v2.py  model.py
writer/: __init__.py  csv_writer.py  model.py
