[tool.poetry]
name = "features-analyzer"
version = "0.1.0"
description = ""
authors = ["dimastarsis <kurilin.dmitriy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
tqdm = "^4.67.1"
aiohttp = "^3.11.11"
tenacity = "^9.0.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
